list bug api noe works
- DTO and DAO share same model
